# scrapy-slackbot

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yaml
scrapyslackbot/: extensions.py
